tests/machine/x/go/cross_join_triple.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cross_join_triple.go:15:21: undefined: Combo
../../../tests/machine/x/go/cross_join_triple.go:16:16: undefined: Combo
../../../tests/machine/x/go/cross_join_triple.go:20:32: undefined: Combo

1: //go:build ignore
